=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.21 - In development

=over

=item *

Added tags to stories for classification and searching. [Michael Peters]

=item *

Added tags to media for classification and searching. [Michael Peters]

=item *

Fixed bug where a user being in a group with admin_user_limited perms
would be given full admin_user access if they were in another group
with neither admin_user nor admin_user_limited perms. [Brad Oaks]

=item *

Fixed bug where New Template -> Save & Stay would hang and not
complete. [Michael Peters]

=item *

Fixed bug where Transform Image would try to operate on an image with
a known extension, but actually of the wrong type. [Michael Peters]

=item *

Fixed a bug where category choosers on New Media and New Template screens
didn't remember the last chosen category if it wasn't a "Save & Stay"
action. [Michael Peters]

=back

=head2 3.20 - June 7th, 2012

=over

=item *

Adding full text search for text-based media objects (Javascript, HTML,
Stylesheets, Plain Text, etc). [Michael Peters]

=item *

Unload/Unlock the session in a post-run hook instead of waiting until the
full request is done (and the session object goes out of scope) so we don't
have to wait on clients to finish getting the request before we can start
handling another one. [Michael Peters]

=item *

Fixed bug where query string wasn't preserved when you had to login and it
tried to preserve the target destination after the login. [Michael Peters]

=item *

Fixed bug where some publish time exceptions were being silently
disguarded and the user would be left with a successful message even
though the item was never published. [Michael Peters]

=back

=head2 3.19 - April 13, 2012

=over

=item *

Don't convert hyphens in media filenames into underscores since hyphens
are valid in URLs and filenames. [Michael Peters]

=item *

Added C<no_anchor> option to L<Krang::Widget::autocomplete_values>.